--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,14 @@ application.invalidToken: invalidToken
 
 # Database
 db.driver: com.mysql.jdbc.Driver
-db.url: jdbc:mysql://localhost:3306/userdatabase
+db.url: jdbc:mysql://localhost:3306/user_database
 db.username: root
-db.password: 
+db.password: onemorelight
 
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql: true
 hibernate.hbm2ddl.auto: create
-entitymanager.packagesToScan: com
+entitymanager.packagesToScan: com.example
 
 
