--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,7 +6,7 @@ application.invalidToken: invalidToken
 
 # Database
 db.driver: com.mysql.jdbc.Driver
-db.url: jdbc:mysql://mysqldb-user:3306/user_database
+db.url: jdbc:mysql://localhost:3306/user_database
 db.username: root
 db.password: test1234
 
