--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,30 @@
 		    <artifactId>jjwt</artifactId>
 		    <version>0.9.1</version>
 		</dependency>
-        
+		
+		<!-- https://mvnrepository.com/artifact/com.mashape.unirest/unirest-java -->
+		<dependency>
+		    <groupId>com.mashape.unirest</groupId>
+		    <artifactId>unirest-java</artifactId>
+		    <version>1.4.9</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.konghq/unirest-objectmapper-jackson -->
+		<dependency>
+		    <groupId>com.konghq</groupId>
+		    <artifactId>unirest-objectmapper-jackson</artifactId>
+		    <version>3.7.02</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/com.konghq/unirest-object-mappers-gson -->
+		<dependency>
+		    <groupId>com.konghq</groupId>
+		    <artifactId>unirest-object-mappers-gson</artifactId>
+		    <version>3.7.02</version>
+		</dependency>
+				
+        <!--  -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
